src/test/ui/parser/issue-1802-1.stderr
error: no valid digits found for number
  --> $DIR/issue-1802-1.rs:5:16
   |
LL |     log(error, 0b);
   |                ^^

error: aborting due to previous error

